--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,3 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-}
-
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
